--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@ body {
 }
 #searchform form {
    box-sizing: border-box;
-   display: inline;
+   display: flex;
 }
 #searchform span {
    background-color: #DEEBFF;
@@ -50,6 +50,9 @@ body {
    border-bottom: 2px solid #F2F2F2;
    border-left: 0;
    border-right: 0;
+}
+#searchform input:focus-visible {
+   outline: none;
 }
 #searchform button {
    background-color: #0065FC;
@@ -88,70 +91,44 @@ body {
    margin-right: 5px;
    padding: 10px;
 }
+#parentaccommodations{
+   display: flex;
+   gap: 60px;
+}
 #accommodations {
-   border: 2px solid black;
-   background-color: #DEEBFF;
    display: grid; 
    grid-template-columns: repeat(3, 1fr);
-   grid-template-rows: auto;
+   grid-template-rows: auto;  
+}
+.greybackground {
+   background-color: #F2F2F2;
+   border-radius: 25px;
 }
 .accommodations .imageframe img{
    width: 100%;
 }
+.photoadjustment{
+   margin-top: -50%;
+}
 .accommodations .imageframe{
-   width: 200px;
+   width: 100%;
    height: 150px;
    overflow: hidden;
+   border-radius: 25px 25px 0 0;
 }
 .accommodations {
    grid-column-start: auto;
    grid-column-end: auto;
+   background-color:white;
+   border-radius: 25px;
+   padding: 20px;
+   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+   margin: 20px 20px 20px 20px;
 }
-#one {
-   border-width: thick;
-   border-style: transparent;
-   border-color: #0065FC;
-   border-radius: 20px;
-   background-color: #DEEBFF;
-   Padding: 10px;
+.accommodations .cardtext {
+   padding: 8px 10px;
 }
-#two {
-   border-width: thick;
-   border-style: transparent;
-   border-color: #0065FC;
-   border-radius: 20px;
-   background-color: #DEEBFF;
-   Padding: 10px;
+.accommodations .cardtext h4, .accommodations .cardtext p, .accommodations .cardtext div{
+   padding: 2px;
 }
-#three {
-   border-width: thick;
-   border-style: transparent;
-   border-color: #0065FC;
-   border-radius: 20px;
-   background-color: #DEEBFF;
-   Padding: 10px;
-}
-#four {
-   border-width: thick;
-   border-style: transparent;
-   border-color: #0065FC;
-   border-radius: 20px;
-   background-color: #DEEBFF;
-   Padding: 10px;
-}
-#five {
-   border-width: thick;
-   border-style: transparent;
-   border-color: #0065FC;
-   border-radius: 20px;
-   background-color: #DEEBFF;
-   Padding: 10px;
-}
-#six {
-   border-width: thick;
-   border-style: transparent;
-   border-color: #0065FC;
-   border-radius: 20px;
-   background-color: #DEEBFF;
-   Padding: 10px;
-}
+
